# Weaving-PR

./: README.md  best-practices.md  task.txt
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/routes/: chat.py  dashboard.py  engineers.py  network.py  pipeline.py
backend/app/core/: config.py
backend/app/models/: __init__.py  dashboard.py  engineer.py  network.py
backend/app/services/: data_loader.py
backend/data/output/: engineers.json
backend/data/processed/: llm_cache.json
backend/data/raw/: members.json
backend/scripts/: 01_collect.py  02_classify.py  03_score.py
backend/scripts/utils/: __init__.py  areas.py  github.py  network.py  scoring.py
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/pipeline/: page.tsx
frontend/components/: DashboardClient.tsx  Header.tsx  ThemeToggle.tsx
frontend/components/Chatbot/: Chatbot.tsx
frontend/components/EngineerDetail/: DetailPanel.tsx  ScoreRadar.tsx
frontend/components/Insights/: DimensionBars.tsx  HeroMetricCard.tsx  InsightsRow.tsx  KeyMetricsCards.tsx  MetricComparisonTable.tsx  OutputOverTimeChart.tsx  ReviewQualityCard.tsx  TeamInvestmentChart.tsx  TopReviewersCard.tsx  TopReviewersChart.tsx  index.ts
frontend/components/Leaderboard/: Leaderboard.tsx
frontend/components/Methodology/: MethodologyPanel.tsx
frontend/components/Pipeline/: PipelineClient.tsx
frontend/lib/: api.ts  colors.ts  formatters.ts  types.ts
